# RAG-Chatbot-LlamaIndex

./: .gitignore  README.md  main.py  pyproject.toml
src/: cli.py  rag_service.py  tui.py
