[project]
name = "local-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "llama-index>=0.14.10",
    "llama-index-core>=0.14.10",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-huggingface-api>=0.6.1",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-node-parser-docling>=0.4.2",
    "llama-index-readers-docling>=0.4.2",
    "llama-index-readers-file>=0.5.5",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-vector-stores-milvus>=0.9.4",
    "logging>=0.4.9.6",
    "python-dotenv>=1.2.1",
    "textual>=7.0.0",
    "textual-dev>=1.8.0",
]
